--- a/BACK/.env
+++ b/BACK/.env
@@ -1,15 +1,14 @@
 DEBUG=True
 
 SECRET_KEY = 'django-insecure-@gghd8+@b_=c7xdj7o#to7y8pln-f605fh+fvvn)m^9x%h$7=v'
+DB_NAME=igva_project
+DB_USER=igva_project_user
+DB_PASSWORD=89Wi2YyfhEcNfWKgxrO8SzrAJVrCN1wO
+DB_HOST=dpg-d3berc63jp1c73avvbj0-a.oregon-postgres.render.com
+DB_PORT=5432
 
-DB_NAME=veterinaria
-DB_USER=root
-DB_PASSWORD=123456789
-DB_HOST=127.0.0.1
-DB_PORT=3306
 
-
-DATABASE_URL='mysql://root:123456789@127.0.0.1:3306/alparque'
+#DATABASE_URL='mysql://root:123456789@127.0.0.1:3306/alparque'
 CLOUDINARY_URL=cloudinary://782239813694322:ctA1BM5644l9Ogsg9ombxTDyOac@dhufclese
 CLOUDINARY_CLOUD_NAME=dhufclese
 CLOUDINARY_API_KEY=782239813694322
